--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,8 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+  - board: nrfmicro_13
+    shield: bento
+  - board: nrfmicro_13
+    shield: settings_reset
