--- a/boards/shields/bento/bento.conf
+++ b/boards/shields/bento/bento.conf
@@ -1,5 +1,8 @@
 CONFIG_ZMK_USB_BOOT=y
 
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
 CONFIG_ZMK_KSCAN_DIRECT_POLLING=y
 
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
