--- a/boards/shields/bento/bento.conf
+++ b/boards/shields/bento/bento.conf
@@ -1,14 +1,23 @@
-CONFIG_ZMK_USB_BOOT=y
+CONFIG_ZMK_KEYBOARD_NAME="Bento"
+
+CONFIG_ZMK_USB_BOOT=n
+CONFIG_ZMK_BLE=y
 
 CONFIG_ZMK_KSCAN_DIRECT_POLLING=y
 
-CONFIG_ZMK_IDLE_TIMEOUT=60000
+CONFIG_ZMK_IDLE_TIMEOUT=30000
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
+CONFIG_ZMK_PM_SOFT_OFF=n
+CONFIG_ZMK_EXT_POWER=n
 
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=n
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_BT_MAX_CONN=3
+CONFIG_BT_MAX_CONN=1
 CONFIG_BT_MAX_PAIRED=3
