--- a/boards/shields/bento/bento.conf
+++ b/boards/shields/bento/bento.conf
@@ -1,12 +1,7 @@
-CONFIG_ZMK_KEYBOARD_NAME="Bento"
-
-CONFIG_ZMK_USB_BOOT=n
-CONFIG_ZMK_BLE=y
-
 CONFIG_ZMK_KSCAN_DIRECT_POLLING=y
 
 CONFIG_ZMK_IDLE_TIMEOUT=30000
-CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=900000
 CONFIG_ZMK_PM_SOFT_OFF=n
 CONFIG_ZMK_EXT_POWER=n
